Added jextract example